# GitPolicyEnforcer

./: .gitignore  Cargo.toml  README.md
hooks/: update
rules/: rules.json
src/: lib.rs  loggers.rs  main.rs  structs.rs  traits.rs  validators.rs
